namespaces/pointofsales/inventory.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory
spec:
  selector:
    matchLabels:
      app: inventory
  template:
    metadata:
      labels:
        app: inventory
    spec:
      serviceAccountName: inventory
      terminationGracePeriodSeconds: 5
      containers:
      - name: inventory
        image: us-east4-docker.pkg.dev/mygke-200/containers/pointofsales/inventory:fbc63fd
        resources:
          requests:
            cpu: 100m
            memory: 512Mi
          limits:
            cpu: 500m
            memory: 1Gi
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 5
          timeoutSeconds: 10
        livenessProbe:
          httpGet:
            path: /healthy
            port: 8080
          initialDelaySeconds: 120
          periodSeconds: 5
          timeoutSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: inventory
spec:
  type: ClusterIP
  selector:
    app: inventory
  ports:
  - name: http
    port: 8080
    targetPort: 8080
---
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: inventory
spec:
  workloadSelector:
    labels:
      app: inventory
  egress:
  - hosts:
    - "istio-system/*"
