namespaces/pointofsales/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pointofsales
  annotations:
    mesh.cloud.google.com/proxy: '{"managed": true}'
  labels:
    name: pointofsales
    istio.io/rev: asm-managed-rapid
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
spec:
  mtls:
    mode: STRICT
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: deny-all
spec:
  {}
---
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: default
spec:
  egress:
  - hosts:
    - "./*"
    - "istio-system/*"
